--- a/project.config
+++ b/project.config
@@ -1,2 +1,8 @@
-[access]
-	inheritFrom = All-Projects
+[access "refs/*"]
+        owner = group android_device_motorola_addison 
+                label-Verified = -1..+1 group android_device_motorola_addison 
+[receive]
+        requireChangeId = true
+[submit]
+        mergeContent = true
+        action = merge always
